tests/ui-stable/transmute-illegal.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui-stable/transmute-illegal.rs:8:76
  |
8 | const POINTER_VALUE: usize = zerocopy::transmute!(&0usize as *const usize);
  |                                                                            ^ consider adding a `main` function to `$DIR/tests/ui-stable/transmute-illegal.rs`

error[E0277]: the trait bound `*const usize: AsBytes` is not satisfied
 --> tests/ui-stable/transmute-illegal.rs:8:30
  |
8 | const POINTER_VALUE: usize = zerocopy::transmute!(&0usize as *const usize);
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `*const usize`
  |
  = help: the following other types implement trait `AsBytes`:
            f32
            f64
            i128
            i16
            i32
            i64
            i8
            isize
          and 6 others
note: required by a bound in `POINTER_VALUE::transmute`
 --> tests/ui-stable/transmute-illegal.rs:8:30
  |
8 | const POINTER_VALUE: usize = zerocopy::transmute!(&0usize as *const usize);
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `POINTER_VALUE::transmute`
  = note: this error originates in the macro `zerocopy::transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
